external-crates/move/crates/move-package-alt/tests/data/invalid_lockfile_parsing/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
TOML parse error at line 9, column 7
  |
9 | bar = { git = "", rev = "7a8d873f5a1" }
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
data did not match any variant of untagged enum PinnedDependencyInfo
